--- a/templates/page.himel.liquid
+++ b/templates/page.himel.liquid
@@ -1,2 +1,25 @@
-<h1>I am learning Shopify coding!</h1>
-<h1>I am trying</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .extra{
+            display: flex;
+            width: 100vw;
+            height: 50vh;
+            justify-content: center;
+            align-items: center;
+            background-color: blueviolet;
+        }
+    </style>
+    <title>Document</title>
+</head>
+<body>
+  <div class="extra">
+    <h1>I am learning Shopify coding!</h1>
+    <h1>I am trying</h1>
+  </div>
+</body>
+</html>
