--- a/templates/page.himel.liquid
+++ b/templates/page.himel.liquid
@@ -20,6 +20,7 @@
   <div class="extra">
     <h1>I am learning Shopify coding!</h1>
     <h1>I am trying</h1>
+    {{"objects"}}
   </div>
 </body>
 </html>
