--- a/templates/page.himel.liquid
+++ b/templates/page.himel.liquid
@@ -1,7 +1,7 @@
 
 <div class="extra">
-    <!-- <h1>I am learning Shopify coding!</h1>
-    <h1>I am trying</h1> -->
+    <h1>I am learning Shopify coding!</h1>
+    <h1>I am trying</h1>
     {% assign name = Himel %}
 {{name|| downcase}}
   
