--- a/templates/page.himel.liquid
+++ b/templates/page.himel.liquid
@@ -14,9 +14,9 @@
 <div class="extra">
     <h1>I am learning Shopify coding!</h1>
     <h1>I am trying</h1>
+    <h3>Dont know!!!!!!!!!</h3>
     {{"objects"}}
-    {{% assign name = Himel %}}
-    {{name | | downcase}}
+  
   </div>
 <style>
     .extra{
