--- a/templates/page.himel.liquid
+++ b/templates/page.himel.liquid
@@ -15,7 +15,9 @@
     <h1>I am learning Shopify coding!</h1>
     <h1>I am trying</h1>
     <h3>Dont know!!!!!!!!!</h3>
+    {{"I ove my country" || upcase}}
     {{"objects"}}
+  
   
   </div>
 <style>
