--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -194,6 +194,7 @@
       }
     {% endstyle %}
 
+    {{ 'custom.css' | asset_url | stylesheet_tag }}
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
     {%- unless settings.type_body_font.system? -%}
