--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -225,7 +225,7 @@
       {%- render 'cart-drawer' -%}
     {%- endif -%}
 
-    {% section 'announcement-bar' %}
+    {% section 'ac-bar' %}
     {% section 'header' %}
     
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
