--- a/sections/ac-bar.liquid
+++ b/sections/ac-bar.liquid
@@ -1,3 +1,25 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{%- comment -%}
 {%- for block in section.blocks -%}
   {%- case block.type -%}
     {%- when 'announcement' -%}
@@ -80,3 +102,5 @@
   }
 }
 {% endschema %}
+
+{%- endcomment -%}
