--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -15,6 +15,7 @@
 <div class="my_liquid">
 
   {{ section.settings.a_text}}
+  {{ section.settings.font_size}}
 </div>
   {% endif %}
 
@@ -34,6 +35,16 @@
                   "id": "a_text",
                   "label": "heading",
                   "default": "Please enter a text"
+                },
+                {
+                  "type": "range",
+                  "id": "font_size",
+                  "min": 12,
+                  "max": 24,
+                  "step": 1,
+                  "unit": "px",
+                  "label": "Font size",
+                  "default": 16
                 }
 
 
