--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -6,6 +6,7 @@
     justify-content: center;
     text-align: center;
     padding: 20px;
+    font-size:{{ section.settings.font_size }}px;
 }
 
   
@@ -15,7 +16,7 @@
 <div class="my_liquid">
 
   {{ section.settings.a_text}}
-  {{ section.settings.font_size}}
+  
 </div>
   {% endif %}
 
