--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -1,7 +1,7 @@
 <style>
 
   .my_liquid {
-    background-color: chartreuse;
+    background-color: {{section.settings.bg_color}};
     color:{{section.settings.body_text}};
     justify-content: center;
     text-align: center;
@@ -52,6 +52,12 @@
               "id": "body_text",
               "label": "Body text",
               "default": "#000000"
+            },
+                {
+              "type": "color",
+              "id": "bg_color",
+              "label": "Background Color",
+              "default": "white"
             }
 
 
