--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -58,6 +58,26 @@
               "id": "bg_color",
               "label": "Background Color",
               "default": "white"
+            },
+            {
+              "type": "select",
+              "id": "text_alignment",
+              "label": "Text Alignment",
+              "options": [
+                {
+                  "value": "left",
+                  "label": "Left"
+                },
+                {
+                  "value": "middle",
+                  "label": "Middle"
+                },
+                {
+                  "value": "right",
+                  "label": "Right"
+                }
+              ],
+              "default": "middle"
             }
 
 
