--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -1,3 +1,4 @@
+{%- comment -%}
 <style>
 
   .my_liquid {
@@ -57,7 +58,7 @@
                 "type": "color_background",
                 "id": "background",
                 "label": "Background",
-                "default":  "#000000"
+                "default":  "#000"
               },
                   {
               "type": "select",
@@ -91,3 +92,8 @@
 
 {% javascript %}
 {% endjavascript %}
+
+
+
+
+{%- endcomment -%}
