--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -1,16 +1,13 @@
-{%- comment -%}
-<style>
 
-  .my_liquid {
-    background-color: {{section.settings.background}};
-    color:{{section.settings.body_text}};
-    text-align: {{section.settings.text_alignment}};
-    padding: {{ section.settings.padding }}px;
-    font-size:{{ section.settings.font_size }}px;
+{{% stylesheet %}
+.my_liquid {
+  background-color: {{section.settings.background}};
+  color:{{section.settings.body_text}};
+  text-align: {{section.settings.text_alignment}};
+  padding: {{ section.settings.padding }}px;
+  font-size:{{ section.settings.font_size }}px;
 }
-
-  
-</style>
+{{% endstylesheet %}}
 
 {% if section.settings.show_announcement %}
 <div class="my_liquid">
@@ -100,4 +97,3 @@
 
 
 
-{%- endcomment -%}
