--- a/sections/acb.liquid
+++ b/sections/acb.liquid
@@ -60,6 +60,12 @@
               "label": "Choose a color",
               "default": "#000000"
             },
+                {
+              "type": "bg color",
+              "id": "background",
+              "label": "Choose a color",
+              "default": "#000"
+            },
 
                   {
               "type": "select",
